# DoodleJump

./: .clang-format  .gitignore  CMakeLists.txt  README.MD  build_data.json
SDL2_connector/: CMakeLists.txt
SDL2_connector/cmake_modules/: AddLinkerFlags.cmake  AddMVSCSpecialCommands.cmake  ExtractSDL2Packages.cmake  FetchSDL2Packages.cmake  FindDependencies.cmake  FindVendorPackages.cmake  InstallSDL2Connector.cmake  OutputProperties.cmake
SDL2_connector/dependencies/: .gitignore  CMakeLists.txt
SDL2_connector/include/SDL2_Connector/: IApplication.hpp  Launcher.hpp  Loger.hpp  Render.hpp  Sprite.hpp
SDL2_connector/include/SDL2_connector/: IApplication.hpp  Sprite.hpp
SDL2_connector/scripts/bash/: cmake_config_debug.sh  delete_cache.sh  delete_connector.sh
SDL2_connector/scripts/powershell/: cmake_build_release.ps1  cmake_config_debug.ps1  cmake_config_release.ps1  delete_connector.ps1
SDL2_connector/source/: Launcher.cpp  Render.cpp  Sprite.cpp
cmake_modules/: AddCompileDefinitions.cmake  AddCompilerFlags.cmake  BuildGame.cmake  BuildLibraries.cmake  ConstructAmmo.cmake  ConstructAnimatedImage.cmake  ConstructAnimatedSpriteWrapper.cmake  ConstructCamera.cmake  ConstructCollider.cmake  ConstructDynamicWorld.cmake  ConstructGameApplication.cmake  ConstructGun.cmake  ConstructImage.cmake  ConstructJetPack.cmake  ConstructLevel.cmake  ConstructLocator.cmake  ConstructParallaxWidget.cmake  ConstructPhysicsEngine.cmake  ConstructPlayer.cmake  ConstructRandomSpawner.cmake  ConstructRectangle.cmake  ConstructScene.cmake  ConstructScoreBoard.cmake  ConstructSpriteWrapper.cmake  ConstructStaticWorld.cmake  ConstructStealth.cmake  ConstructWormhole.cmake  CustomLibrariesPaths.cmake  ExtractAssets.cmake  ExtractDragonLakeLibraries.cmake  ExtractVendors.cmake  MSVCSpecials.cmake  OutputProperties.cmake
documentation/diagrams/: .$project_architecture.drawio.dtmp  build_methods.drawio  project_architecture.drawio
game/libraries/abilities/jet_pack/: JetPack.cpp  JetPack.hpp
game/libraries/abilities/stealth/: Stealth.cpp  Stealth.hpp
game/libraries/abilities/wormhole/: Wormhole.cpp  Wormhole.hpp
game/libraries/actor/interface/: I_Shooter.hpp
game/libraries/actor/player/: Player.cpp  Player.hpp
game/libraries/application/: GameApplication.cpp  GameApplication.hpp
game/libraries/graphics/animated_image/: AnimatedImage.cpp  AnimatedImage.hpp  AnimatedSpriteWrapper.cpp  AnimatedSpriteWrapper.hpp
game/libraries/graphics/image/: Image.cpp  Image.hpp
game/libraries/graphics/interface/: IGraphicle.hpp
game/libraries/level/level/: I_Stoppable.hpp  Level.cpp  Level.hpp
game/libraries/level/world/dynamic/: WorldDynamic.cpp  WorldDynamic.hpp
game/libraries/level/world/interface/: I_Accounting.hpp  I_DynamicSpawn.hpp  I_Universe.hpp
game/libraries/level/world/static/: WorldStatic.cpp  WorldStatic.hpp
game/libraries/modules/camera/: Camera.cpp  Camera.hpp
game/libraries/modules/collider/: Collider.cpp  Collider.hpp  I_Collidable.hpp
game/libraries/modules/gun/: Gun.cpp  Gun.hpp
game/libraries/modules/locator/: I_RelocatableActor.hpp  Locator.cpp  Locator.hpp
game/libraries/modules/parallax/: ParallaxItem.cpp  ParallaxItem.hpp
game/libraries/modules/physics_engine/: I_Connectable.hpp  I_Mechanics.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp
game/libraries/modules/scene/: I_LocatableScene.hpp  Scene.cpp  Scene.hpp
game/libraries/modules/spawn/: RandomSpawn.cpp  RandomSpawn.hpp  Randomizer.hpp
game/libraries/projectiles/ammo/: Ammo.cpp  Ammo.hpp
game/libraries/rectangle/: RectangleCore.cpp  RectangleCore.hpp  RectangleShape.cpp  RectangleShape.hpp
game/libraries/score_board/: ScoreBoard.cpp  ScoreBoard.hpp
game/libraries/screen/: ScreenItem.hpp
game/libraries/utilities/: Environment.hpp  Path.hpp  Sizes.hpp
game/source/: DoodleJump.cpp
resources/: icon.rc
scripts/bash/: build.sh  cmake_config_debug.sh  delete_all.sh  delete_cache.sh  delete_executables.sh  run.sh  run_debug.sh
scripts/bash/sub_scripts/: cmake_build.sh  cmake_config.sh  create_build_data.sh  delete.sh  re_build_connector.sh  re_build_game.sh  re_config_all.sh
scripts/batch/: build.bat  delete_all.bat  run.bat
scripts/batch/sub_scripts/: cmake_config.bat  create_build_data.bat  re_build_connector.bat  re_build_game.bat  re_config_all.bat
scripts/linux/: build.sh  delete_all.sh  run.sh
scripts/linux/sub_scripts/: cmake_build.sh  cmake_config.sh  re_build_connector.sh  re_build_game.sh  re_config_all.sh
scripts/powershell/: build.ps1  cmake_build_debug.ps1  cmake_build_release.ps1  cmake_config_debug.ps1  cmake_config_release.ps1  delete.ps1  delete_all.ps1  delete_cache.ps1  delete_connector.ps1  delete_executables.ps1  delete_vendor.ps1  get_build_size.ps1  get_dl_framework_size.ps1  get_executable_size.ps1  get_workspace_size.ps1  run.ps1  run_debug.ps1  run_release.ps1
scripts/powershell/sub_scripts/: cmake_build.ps1  cmake_config.ps1  create_build_data.ps1  delete.ps1  re_build_connector.ps1  re_build_game.ps1  re_config_all.ps1
scripts/win/: build.bat  delete_all.bat  run.bat
scripts/win/sub_scripts/: cmake_build.bat  cmake_config.bat  delete.bat  re_build_connector.bat  re_build_game.bat  re_config_all.bat
tests/launch_connector/: TL.cpp
tests/tested_application/: TestedGameApp.cpp  TestedGameApp.hpp
